2008-01-27  Mickael Remond  <mremond@process-one.net>

	* src/network/exmpp_session.erl: Now forward IQ packet to client
	session (Thanks to Will Glozer).

	* src/network/exmpp_session.erl: Support session stop (Thanks to Will
	Glozer).

2008-01-16  Mickael Remond  <mremond@process-one.net>

	* src/network/exmpp_ssl.erl: SSL client connection support (Thanks
	to Wil Glozer)
	* src/Emakefile.in: Likewise
	* src/Makefile.am: Likewise
	* exmpp/src/network/exmpp_session.erl: Likewise
	* exmpp/ebin/Makefile.am: Likewise
	
	* exmpp/configure.ac: Clean-up compilation process (Thanks to Will
	Glozer)
	* exmpp/include/exmpp.hrl: Likewise
	* exmpp/src/Makefile.am: Likewise
	* exmpp/ebin/Makefile.am: Likewise
	* exmpp/ac-aux/depcomp: Likewise
	* exmpp/ac-aux/missing: Likewise
	* exmpp/ac-aux/config.guess: Likewise
	* exmpp/ac-aux/config.sub: Likewise
	* exmpp/ac-aux/ltmain.sh: Likewise
	* exmpp/ac-aux/install-sh: Likewise	

2007-07-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/Makefile.am, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am: Updated Makefiles to include the new modules.

	* ebin/exmpp.app.in: The modules list wasn't up-to-date; it's now
	fixed.

2007-07-01  Christophe Romain  <christophe.romain@process-one.net>

	* include/xmpp.hrl, src/network/exmpp_callbacks.erl,
	src/network/exmpp_tcp.erl: Add network modules for direct client use.

2007-07-01  Mickael Remond  <mremond@process-one.net>

	* src/core/exmpp_jid.erl: Make jid can generate random resource when
	asked. A new is_jid function has been added.

2007-06-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Branch 0.7.

2007-06-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/Makefile.am: Moved some targets around to reorder them more
	logically.

	* Makefile.unix, c_src/Makefile.unix, src/Makefile.unix,
	ebin/Makefile.unix: Added Makefiles to provide an alternate build
	procedure. It's intended for Unix plateforms where the autotools are